[gd_scene load_steps=15 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://items/star.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/bat.tscn" type="PackedScene" id=3]
[ext_resource path="res://items/Gem.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/Ghost.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/bee.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemies/fly.tscn" type="PackedScene" id=7]
[ext_resource path="res://TileSet_candy.tres" type="TileSet" id=8]
[ext_resource path="res://player.tscn" type="PackedScene" id=9]
[ext_resource path="res://backgrounds/bg_castle.png" type="Texture" id=10]
[ext_resource path="res://sounds/star_hunter4.ogg" type="AudioStream" id=11]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -373.86, -278.566, 0, 0, 0, 0, -166.424, -280.462, 0, 0, 0, 0, -222.124, -631.135, 0, 0, 0, 0, 47.1588, -714.16, 0, 0, 0, 0, 721.326, 426.95, 0, 0, 0, 0, 873.455, -712.002, 0, 0, 0, 0, 1062.16, -707.165, 0, 0, 0, 0, 2605.15, -209.95, 0, 0, 0, 0, 2653.17, 114.186, 0, 0, 0, 0, 2841.4, 95.2309, 0, 0, 0, 0, 3325.42, -147.397, 0, 0, 0, 0, 3673.06, -158.77, 0, 0, 0, 0, 5541.53, 340.514, 0, 0, 0, 0, 5596.47, 632.803, 0, 0, 0, 0, 5422.44, 632.426, 0, 0, 0, 0, 4980.68, 632.426, 0, 0, 0, 0, 4439.04, 348.096, 0, 0, 0, 0, 4264.64, 345.442, 0, 0, 0, 0, 4018.79, 17.5149, 0, 0, 0, 0, 2815.87, 668.519, 0, 0, 0, 0, 2433.56, 687.868, 0, 0, 0, 0, 2071.58, 690.049, 0, 0, 0, 0, 1675.81, -200.232, 0, 0, 0, 0, 1559.99, 422.963, 0, 0, 0, 0, 1915.81, 947.102, 0, 0, 0, 0, 1617.83, 1251.55, 0, 0, 0, 0, 1500.4, 1107.98, 0, 0, 0, 0, 1449.56, 358.959, 0, 0, 0, 0, 1409.22, 2.7299, 0, 0, 0, 0, 1409.22, -473.167, 0, 0, 0, 0, 1248.48, 9.94047 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1507.05, 1983.84, 0, 0, 0, 0, 1555.08, 972.126, 0, 0, 0, 0, 1321.96, 92.2189, 0, 0, 0, 0, 957.375, 828.396, 0, 0, 0, 0, 724.93, -360.055, 0, 0, 0, 0, 269.723, -294.751, 0, 0, 0, 0, -332.993, -293.214, 0, 0, 0, 0, -511.676, -642.924, 0, 0, 0, 0, -148.991, -740.738, 0, 0, 0, 0, -148.974, -633.121, 0, 0, 0, 0, 361.917, -754.183, 0, 0, 0, 0, 849.775, -713.849, 0, 0, 0, 0, 1498.97, -650.465, 0, 0, 0, 0, 1833.18, -554.43, 0, 0, 0, 0, 2017.44, -689.487, 0, 0, 0, 0, 2225.75, -694.388, 0, 0, 0, 0, 2367.89, -615.966, 0, 0, 0, 0, 2666.87, -397.854, 0, 0, 0, 0, 2981.37, -264.788, 0, 0, 0, 0, 3330.94, -197.564, 0, 0, 0, 0, 3710.87, 549.093, 0, 0, 0, 0, 4014.75, 289.32, 0, 0, 0, 0, 4762.7, -7.21405, 0, 0, 0, 0, 3863.3, -323.353, 0, 0, 0, 0, 3073.36, -1242.01 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 740.029, -1242.02, 0, 0, 0, 0, 3252.61, 235.831, 0, 0, 0, 0, 2392.91, -98.1169, 0, 0, 0, 0, 2690.49, -388.345, 0, 0, 0, 0, 3406.87, -586.728, 0, 0, 0, 0, 3902.83, -564.686, 0, 0, 0, 0, 4729.43, -369.976, 0, 0, 0, 0, 5203.34, -325.891, 0, 0, 0, 0, 5519.29, 56.1814, 0, 0, 0, 0, 4821.27, 331.714, 0, 0, 0, 0, 4328.99, 313.345, 0, 0, 0, 0, 3891.81, 221.501, 0, 0, 0, 0, 3465.65, 225.175, 0, 0, 0, 0, 2778.66, 170.068, 0, 0, 0, 0, 2359.85, 239.87, 0, 0, 0, 0, 1985.12, 63.5289, 0, 0, 0, 0, 1999.82, -300.174, 0, 0, 0, 0, 2080.64, -491.21, 0, 0, 0, 0, 2400.26, -527.948, 0, 0, 0, 0, 2797.02, -921.041, 0, 0, 0, 0, 2988.06, -777.764, 0, 0, 0, 0, 2033.25, 307.814, 0, 0, 0, 0, 2127.55, 1167.74, 0, 0, 0, 0, 2229.91, 1933.02 )
}

[node name="Level" type="Node2D"]
script = ExtResource( 1 )
Star = ExtResource( 2 )
Bat = ExtResource( 3 )
Gem = ExtResource( 4 )
Ghost = ExtResource( 5 )
Bee = ExtResource( 6 )
Fly = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -1.79785, 0 )
tile_set = ExtResource( 8 )
cell_size = Vector2( 70, 70 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( -524290, 31, 0, -589822, 31, 0, -589814, 7, 0, -589813, 8, 0, -589812, 8, 0, -589811, 8, 0, -589810, 8, 0, -589809, 8, 0, -589808, 8, 0, -589807, 25, 0, -458760, 18, 0, -458757, 24, 0, -458756, 8, 0, -458755, 8, 0, -458754, 8, 0, -458753, 8, 0, -524288, 8, 0, -524287, 8, 0, -524286, 8, 0, -524285, 8, 0, -524284, 22, 0, -524272, 5, 0, -524271, 26, 0, -524270, 25, 0, -393224, 18, 0, -393222, 24, 0, -393221, 5, 0, -393220, 5, 0, -393219, 5, 0, -393218, 5, 0, -393217, 19, 0, -458752, 19, 0, -458751, 19, 0, -458750, 19, 0, -458749, 19, 0, -458736, 5, 0, -458735, 5, 0, -458734, 26, 0, -458733, 25, 0, -327688, 18, 0, -327686, 5, 0, -327685, 5, 0, -327684, 5, 0, -327683, 5, 0, -327682, 5, 0, -327681, 19, 0, -393216, 19, 0, -393215, 19, 0, -393214, 19, 0, -393213, 19, 0, -393200, 5, 0, -393199, 5, 0, -393198, 5, 0, -393197, 5, 0, -393196, 25, 0, -393183, 6, 0, -262152, 18, 0, -327664, 5, 0, -327663, 5, 0, -327662, 5, 0, -327661, 5, 0, -327660, 26, 0, -327659, 25, 0, -327647, 6, 0, -196616, 18, 0, -262138, 18, 0, -262128, 5, 0, -262127, 5, 0, -262126, 5, 0, -262125, 5, 0, -262124, 5, 0, -262123, 26, 0, -262122, 25, 0, -262111, 6, 0, -262110, 18, 0, -131080, 7, 0, -131079, 8, 0, -131078, 8, 0, -131077, 8, 0, -131076, 8, 0, -131075, 8, 0, -131074, 8, 0, -131073, 8, 0, -196608, 8, 0, -196607, 8, 0, -196606, 8, 0, -196605, 8, 0, -196604, 9, 0, -196602, 18, 0, -196592, 5, 0, -196591, 5, 0, -196590, 5, 0, -196589, 5, 0, -196588, 5, 0, -196587, 5, 0, -196586, 26, 0, -196585, 25, 0, -196575, 6, 0, -196574, 18, 0, -131066, 18, 0, -131056, 5, 0, -131055, 5, 0, -131054, 5, 0, -131053, 5, 0, -131052, 5, 0, -131051, 5, 0, -131050, 5, 0, -131049, 26, 0, -131048, 25, 0, -131039, 6, 0, -131038, 18, 0, -131036, 6, 0, -131035, 6, 0, -131034, 6, 0, -131033, 19, 0, -131032, 19, 0, -131031, 6, 0, -131030, 6, 0, -131029, 6, 0, -131028, 6, 0, -65530, 18, 0, -65520, 5, 0, -65515, 19, 0, -65514, 19, 0, -65513, 5, 0, -65512, 26, 0, -65511, 25, 0, -65503, 6, 0, -65502, 18, 0, -65500, 6, 0, -65499, 19, 0, -65498, 19, 0, -65497, 19, 0, -65496, 19, 0, -65495, 19, 0, -65492, 6, 0, -65490, 12, 0, -65489, 13, 0, -65488, 14, 0, -65485, 12, 0, -65484, 13, 0, -65483, 14, 0, 6, 18, 0, 16, 5, 0, 22, 19, 0, 23, 19, 0, 24, 5, 0, 25, 26, 0, 26, 25, 0, 33, 5, 0, 34, 18, 0, 36, 6, 0, 44, 6, 0, 65542, 18, 0, 65552, 5, 0, 65560, 5, 0, 65561, 5, 0, 65562, 26, 0, 65563, 25, 0, 65569, 5, 0, 65570, 18, 0, 65572, 6, 0, 65580, 6, 0, 65592, 12, 0, 65593, 13, 0, 65594, 14, 0, 131078, 18, 0, 131088, 5, 0, 131095, 18, 0, 131096, 19, 0, 131097, 5, 0, 131098, 5, 0, 131099, 5, 0, 131105, 5, 0, 131106, 18, 0, 131108, 6, 0, 131116, 6, 0, 196614, 18, 0, 196624, 5, 0, 196629, 21, 0, 196630, 22, 0, 196631, 18, 0, 196632, 19, 0, 196633, 5, 0, 196634, 5, 0, 196635, 5, 0, 196641, 5, 0, 196642, 18, 0, 196644, 6, 0, 196645, 19, 0, 196646, 19, 0, 196647, 19, 0, 196648, 19, 0, 196649, 19, 0, 196652, 6, 0, 196666, 6, 0, 196670, 21, 0, 196671, 22, 0, 327677, 21, 0, 327678, 8, 0, 327679, 23, 0, 262147, 7, 0, 262148, 8, 0, 262149, 8, 0, 262150, 8, 0, 262151, 9, 0, 262160, 5, 0, 262162, 11, 0, 262167, 18, 0, 262168, 19, 0, 262169, 19, 0, 262170, 5, 0, 262171, 5, 0, 262177, 5, 0, 262178, 18, 0, 262187, 18, 0, 262188, 6, 0, 262202, 6, 0, 327696, 5, 0, 327703, 18, 0, 327706, 5, 0, 327707, 5, 0, 327713, 5, 0, 327714, 18, 0, 327723, 18, 0, 327724, 6, 0, 327738, 6, 0, 327739, 6, 0, 393232, 5, 0, 393239, 18, 0, 393242, 5, 0, 393243, 5, 0, 393249, 6, 0, 393250, 4, 0, 393251, 7, 0, 393252, 8, 0, 393253, 8, 0, 393254, 8, 0, 393255, 8, 0, 393256, 8, 0, 393257, 8, 0, 393259, 18, 0, 393260, 6, 0, 393274, 6, 0, 393275, 6, 0, 393276, 6, 0, 393277, 6, 0, 393278, 6, 0, 393279, 6, 0, 393280, 6, 0, 393281, 6, 0, 393282, 6, 0, 393283, 6, 0, 393284, 6, 0, 393285, 6, 0, 393286, 19, 0, 393287, 19, 0, 393288, 19, 0, 393289, 19, 0, 393290, 6, 0, 393291, 6, 0, 393292, 6, 0, 393293, 6, 0, 393294, 6, 0, 393295, 6, 0, 393296, 6, 0, 393299, 6, 0, 458761, 7, 0, 458762, 8, 0, 458763, 9, 0, 458768, 5, 0, 458769, 5, 0, 458770, 5, 0, 458771, 5, 0, 458775, 5, 0, 458776, 5, 0, 458777, 5, 0, 458778, 5, 0, 458779, 5, 0, 458785, 6, 0, 458786, 6, 0, 458787, 6, 0, 458788, 6, 0, 458789, 6, 0, 458790, 6, 0, 458791, 6, 0, 458792, 6, 0, 458793, 6, 0, 458795, 18, 0, 458796, 5, 0, 458821, 6, 0, 458835, 6, 0, 524304, 5, 0, 524305, 5, 0, 524306, 5, 0, 524307, 5, 0, 524310, 5, 0, 524311, 5, 0, 524312, 5, 0, 524313, 5, 0, 524314, 5, 0, 524315, 5, 0, 524321, 6, 0, 524322, 6, 0, 524323, 6, 0, 524324, 6, 0, 524325, 6, 0, 524326, 6, 0, 524327, 6, 0, 524328, 6, 0, 524329, 6, 0, 524331, 18, 0, 524332, 5, 0, 524357, 6, 0, 524370, 6, 0, 524371, 6, 0, 589840, 5, 0, 589841, 5, 0, 589842, 5, 0, 589843, 5, 0, 589867, 18, 0, 589868, 5, 0, 589893, 6, 0, 589905, 6, 0, 589906, 6, 0, 589907, 6, 0, 655376, 5, 0, 655377, 5, 0, 655378, 5, 0, 655379, 5, 0, 655403, 18, 0, 655404, 5, 0, 655429, 6, 0, 655430, 6, 0, 655431, 6, 0, 655432, 6, 0, 655433, 6, 0, 655434, 6, 0, 655435, 6, 0, 655436, 6, 0, 655437, 6, 0, 655438, 6, 0, 655439, 6, 0, 655440, 6, 0, 655441, 6, 0, 655442, 6, 0, 655443, 6, 0, 720912, 5, 0, 720913, 5, 0, 720914, 5, 0, 720915, 5, 0, 720916, 5, 0, 720917, 5, 0, 720918, 5, 0, 720920, 18, 0, 720921, 5, 0, 720922, 5, 0, 720923, 5, 0, 720924, 5, 0, 720925, 5, 0, 720926, 5, 0, 720927, 6, 0, 720928, 6, 0, 720929, 6, 0, 720930, 6, 0, 720931, 6, 0, 720932, 6, 0, 720933, 6, 0, 720934, 6, 0, 720935, 6, 0, 720936, 6, 0, 720937, 6, 0, 720938, 6, 0, 720939, 5, 0, 720940, 5, 0, 786448, 5, 0, 786449, 5, 0, 786450, 5, 0, 786451, 5, 0, 786452, 19, 0, 786453, 19, 0, 786456, 18, 0, 786460, 5, 0, 851984, 5, 0, 851985, 5, 0, 851986, 5, 0, 851987, 5, 0, 851988, 19, 0, 851992, 18, 0, 851996, 5, 0, 917520, 5, 0, 917521, 5, 0, 917522, 5, 0, 917523, 5, 0, 917524, 19, 0, 917528, 18, 0, 917532, 5, 0, 983056, 5, 0, 983057, 5, 0, 983058, 5, 0, 983059, 5, 0, 983064, 18, 0, 983068, 5, 0, 1048592, 5, 0, 1048593, 5, 0, 1048594, 5, 0, 1048595, 5, 0, 1048600, 18, 0, 1048603, 5, 0, 1048604, 5, 0, 1114128, 5, 0, 1114129, 5, 0, 1114130, 5, 0, 1114131, 5, 0, 1114133, 28, 0, 1114136, 18, 0, 1114139, 5, 0, 1179664, 5, 0, 1179665, 5, 0, 1179666, 5, 0, 1179667, 5, 0, 1179669, 29, 0, 1179674, 5, 0, 1179675, 5, 0, 1245200, 5, 0, 1245201, 5, 0, 1245202, 5, 0, 1245203, 5, 0, 1245204, 5, 0, 1245205, 5, 0, 1245206, 5, 0, 1245207, 5, 0, 1245208, 5, 0, 1245209, 5, 0, 1245210, 5, 0, 1245211, 5, 0 )

[node name="player" parent="." instance=ExtResource( 9 )]
position = Vector2( -115.52, 180.5 )

[node name="ItemPositions" type="Path2D" parent="."]
visible = false
position = Vector2( 2.45068, 4.03329 )
scale = Vector2( 1, 1.01328 )
curve = SubResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1
scroll_offset = Vector2( 1, 1 )
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -1
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 10, 10 )
motion_mirroring = Vector2( 1048, 1024 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 2048.0
margin_bottom = 1024.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 2

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "bg_music"

[node name="BeePath" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="BeePath"]
visible = false
position = Vector2( 1507.05, 1983.84 )
rotation = -1.52332

[node name="FlyPath" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="FlyPath"]
position = Vector2( 740.029, -1242.02 )
rotation = 0.531749
